# sap-flex-search-cli

./: .gitignore  CLAUDE.md  README.md  mise.toml  pyproject.toml
.claude/skills/flexsearch-query/: SKILL.md
src/flexsearch/: cli.py  client.py  config.py  output.py  repl.py  safety.py
tests/: test_app_url.py  test_config.py  test_csrf_parse.py  test_output.py  test_safety.py
