[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexsearch-cli"
version = "0.1.0"
description = "Python CLI to run FlexibleSearch queries against SAP Commerce Cloud 2211 via HAC."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Abacus DevOps" }]
license = { text = "Proprietary" }
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "PyYAML>=6.0",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
flexsearch = "flexsearch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
